# emuDS

./: CMakeLists.txt
src/: main.cpp
src/core/: bus.cpp  bus.h
src/core/arm7/: arm7.cpp  arm7.h
src/core/arm9/: arm9.cpp  arm9.h  cp15.cpp  cp15.h  instr_decoding.cpp
src/core/gpu/: gpu.cpp  gpu.h
src/core/spi/: cart.cpp  cart.h  firmware.cpp  firmware.h  rtc.cpp  rtc.h
